--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,8 +5,8 @@
 .App-inner{
   display:flex;
 }
+:root{
+  --secondary-color: rgba(0, 0, 0, 0.182);
+  --main-color: rgb(96, 85, 24);
 
-/* #title{
-  font-weight: bold;
-  background-color: red;
-} */
+}
