--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -8,7 +8,7 @@
 
 .navbar{
     width: 15vw;
-    height: 100vh;
+    height: max-content;
     background-color: rgba(0, 0, 0, 0.182);
     display: flex;
     flex-direction: column;
