--- a/client/src/components/sideNavbar/sideNavbar.css
+++ b/client/src/components/sideNavbar/sideNavbar.css
@@ -9,6 +9,7 @@
     display:flex;
     position:fixed;
     z-index: 1;
+    height: 100%;
 }
 main{
     width: 100%;
@@ -22,7 +23,7 @@ main{
 .sidebar{
     background: #000;
     color: #fff;
-    height: 100vh;
+    height: 100%;
     width: 20rem;
     opacity: 0.8;
     transition: all 0.5s;
@@ -101,3 +102,4 @@ main{
   ::-webkit-scrollbar-thumb:hover {
     background-color: rgba(127, 127, 98, 0.889);
   }
+
