--- a/client/src/pages/about/about.css
+++ b/client/src/pages/about/about.css
@@ -1,6 +1,6 @@
 .about-container{
     width: 100%;
-    height: 150vh;
+    height: max-content;
     left:10rem;
     display:flex;
     flex-direction: column;
@@ -23,7 +23,7 @@
     width: 100%;
     display:flex;
     gap:25rem;
-    height: 60vh;
+    height: 65vh;
     padding-left: 20vw;
     padding-top: 3rem;
     border-bottom: 1rem solid black;
@@ -66,10 +66,10 @@
     background-color:rgba(109, 95, 19, 0.786);
     border-radius:50%;
     position:absolute;
-    top: -95px;
+    top: -87px;
     bottom:-330px;
-    left:-18px;
-    right: -880px;
+    left:-12px;
+    right: -860px;
     overflow: hidden;
     margin: auto;
     animation: circle 5s linear infinite;
@@ -77,7 +77,7 @@
 
  .section3{
     width:100%;
-    height: 40vh;
+    height: max-content;
     display:flex;
     flex-direction: column;
     gap:4rem;
@@ -113,5 +113,35 @@
    100% {
     transform: rotate(360deg) translate(-165px)rotate(-360deg);
    } 
+ }
+
+ @media(max-width:768px){
+   .About-section1{
+      background-position: center top;
+   }
+   .section-2{
+      display: flex;
+      flex-direction: column;
+      gap:5rem;
+      height: max-content;
+     padding-left: 20vw;
+   }
+   .right-about{
+      padding-bottom: 2rem;
+   }
+   .left-about{
+      width:80%;
+   }
+   .circle{
+     display: none;
+   }
+   .right-about img{
+      width: 25rem;
+      height: 25rem;
+   }
+   .tech-grid{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(6, 1fr);}
  }
 
