--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -22,21 +22,7 @@
     opacity: 0.5;
     z-index: 1;
 }
-/* .home::before{
-    position: absolute;
-    content: "I design and develop experiences that make people's lives simple";
-    font-size: 3rem;
-    padding: 100px 0 20px 0;
-    padding-left: 21px;
-    width: 230px;
-    height: 418px;
-    rotate: -12.5deg;
-    background-color: white;
-    top: 12rem;
-    left: 56rem;
-    opacity: 0.8;
-    animation: type 10s steps(40,end) forwards;
-} */
+
 
 .introduction-container{
     width:max-content;
@@ -196,6 +182,11 @@
       border-color: transparent;
     }
   }
+  @media(max-width:768px){
+    .introduction-container {
 
-   /* margin: 0 auto auto auto; */
-    /* background: linear-gradient(to right, #f8b195, #f67280, #c06c84); */
+    padding-left: 8rem;}
+    .introduction-container h1{
+      font-size: 1.5rem;
+    }
+  }
